# base

./: .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
alembic/: env.py  script.py.mako
alembic/versions/: 2023_10_04_1554-d46360dc81e0_create_users_table.py  2023_10_08_0407-cfe174afdabe_create_table_user.py  2023_10_08_0408-7a5aa4ca7ff0_create_table_category.py
app/: config.py  db.py  main.py
app/api/base/: deps.py  des.py  exceptions.py
app/api/v1/: __init__.py
app/api/v1/routes/: auth.py  users.py
app/api/v1/schemas/: users.py
app/api/v1/services/auth/: __init__.py  authenticate_user_service.py  create_access_token_service.py  verify_password_service.py
app/api/v1/services/users/: __init__.py  create_user_service.py  login_for_access_token_service.py
app/api/v1/templates/: register.html
app/models/: category.py  user.py
docker/app/: Dockerfile
